--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "finnhub": "^1.2.19",
+    "firebase": "^11.5.0",
+    "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "tailwind": "^4.0.0",
+    "yahoo-finance2": "^2.13.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
